--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 body{
   background:#f5f5f5;
 }
+#menu{
+  display:none;
+  width:200px;
+  height:auto;
+  border:2px solid black;
+  box-shadow:10px 10px 5px black;
+}
+#menu >li{
+  display:block;
+}
