--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ width: 30px;
   height:auto;
   /*border:2px solid black;*/
   box-shadow:5px 5px 5px #a5a1ab;
-  position:fixed;
+  position:absolute;
   top:65px;
   left:55px;
   background:#abc;
@@ -43,6 +43,8 @@ width: 30px;
 min-height: 20vw;
 display: flex;
 justify-content: space-around;
+  position:relative;
+  top:65px;
 }
 #main >h1{
   text-align:center;
