--- a/css/styles.css
+++ b/css/styles.css
@@ -59,19 +59,19 @@ min-height: 20vw;
 display: flex;
 justify-content: space-around;
 position:relative;
-  top:65px;
+  padding-top:75px;
 }
 #music-braille{
 min-height: 20vw;
 display: flex;
 justify-content: space-around;
   position:relative;
-  top:65px;
+    padding-top:75px;
 }
 #audio{
 min-height: 20vw;
 display: flex;
 justify-content: space-around;
   position:relative;
-  top:65px;
+    padding-top:75px;
 }
