--- a/css/styles.css
+++ b/css/styles.css
@@ -13,12 +13,15 @@ body{
   background:darkgray;
   height:65px;
   box-shadow: 5px 5px 5px black;
+  display: flex;
+  justify-content: left;  
 }
 #topbar >a{
   padding-top: 15px;
   display: block;
   padding-left: 15px;
   cursor:pointer;
+  line-height: 1.9em;  
 }
 .span-bar{
  border-bottom: 3px solid white;
